syntax = "proto3";

option csharp_namespace = "Tony.Protos";

package Auth;
service AuthEndpoint {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
	string Username = 1;
	string Password = 2;
}

message LoginResponse {
	int32 Id = 1;
}