syntax = "proto3";

option csharp_namespace = "Tony.Shared.Protos";

package PlayerData;
service PlayerDataEndpoint {
  rpc GetUserObject (UserObjectRequest) returns (UserObjectResponse);
}

message UserObjectRequest {
	int32 Id = 1;
}

message UserObjectResponse {
	int32 Id = 1;
	string Username = 2;
	int32 Credits = 3;
	string Figure = 4;
	string Sex = 5;
	string Mission = 6;
	int32 Tickets = 7;
	string PoolFigure = 8;
	int32 Film = 9;
	bool ReceiveNews = 10;
}